# tastematter

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
cli/: .gitignore  ADMIN_INSTALL.txt  INSTALL_DAEMON.md  pyproject.toml
cli/docs/specs/: 06_CHAIN_SORTING_FIX_SPEC.md
cli/src/context_os_events/: __init__.py  agent_context.py  cli.py  query_engine.py
cli/src/context_os_events/analysis/: __init__.py
cli/src/context_os_events/capture/: __init__.py  file_watcher.py  git_sync.py  jsonl_parser.py
cli/src/context_os_events/daemon/: __init__.py  config.py  runner.py  service.py  state.py
cli/src/context_os_events/db/: __init__.py  connection.py  schema.sql
cli/src/context_os_events/index/: __init__.py  bloom.py  chain_graph.py  co_access.py  context_index.py  file_tree.py  inverted_index.py  temporal.py
cli/src/context_os_events/intelligence/: __init__.py  jsonl_context.py  queries.py
cli/src/context_os_events/observability/: __init__.py  event_logger.py  events.py  state.py
cli/src/context_os_events/visibility/: __init__.py  query_logger.py  snapshot.py
cli/tests/: __init__.py  test_agent_context.py  test_cli_build_chains.py  test_cli_logging.py  test_cli_query.py  test_event_logger.py  test_intelligence_queries.py  test_jsonl_context.py  test_query_engine.py  test_query_logger.py  test_snapshot_generator.py  test_state.py  test_verification.py
cli/tests/capture/: __init__.py  test_file_watcher.py  test_git_sync.py  test_jsonl_parser.py
cli/tests/daemon/: __init__.py  test_cli.py  test_config.py  test_runner.py  test_service.py  test_state.py
cli/tests/index/: test_bloom.py  test_chain_graph.py  test_co_access.py  test_context_index.py  test_file_tree.py  test_inverted_index.py  test_temporal.py
cli/tests/parity/: __init__.py  conftest.py  test_chain_graph_parity.py  test_git_sync_parity.py  test_inverted_index_parity.py  test_session_parser_parity.py  utils.py
core/: Cargo.toml  build.rs
core/docs/specs/context_packages/: 00_2026-02-01_DATABASE_WRITE_PATH_FIX.md  README.md  (+1 more)
core/scripts/: test_intel.sh
core/src/: context_restore.rs  error.rs  http.rs  lib.rs  main.rs  query.rs  storage.rs  types.rs
core/src/capture/: file_watcher.rs  git_status.rs  git_sync.rs  jsonl_parser.rs  mod.rs
core/src/daemon/: config.rs  gitops.rs  mod.rs  state.rs  sync.rs
core/src/graph/: executor.rs  mod.rs
core/src/index/: chain_graph.rs  file_edges.rs  inverted_index.rs  mod.rs
core/src/intelligence/: anthropic.rs  cache.rs  client.rs  mod.rs  types.rs
core/src/telemetry/: events.rs  mod.rs
core/src/trail/: config.rs  mod.rs  paths.rs  pull.rs  push.rs
core/tests/: http_test.rs  integration_test.rs  intel_e2e.rs
core/tests/common/: mod.rs
src/: app.css  (+1 more)
(+538 files in other folders)
