[package]
name = "context-os-core"
version = "0.1.0"
edition = "2021"
description = "Core query library for context-os"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "context-os"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "chrono"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }
