[package]
name = "tastematter"
version = "0.1.0"
edition = "2021"
description = "Context intelligence CLI for Claude Code sessions"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "tastematter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "chrono"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4", features = ["util"] }
git2 = "0.19"
glob = "0.3"
md5 = "0.7"
walkdir = "2.4"
notify = "6.1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }
tempfile = "3.10"
rusqlite = "0.32"
assert_cmd = "2.0"
